[package]
name = "meteora_sniper_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
bincode = "1.3"
prost = "0.13"
tonic = "0.11"
tokio-stream = "0.1"
spl-token = "4.0.0"
solana-client = "=2.2.1"
solana-sdk = "=2.2.1"
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
futures-util = "0.3"
solana-program = "=2.2.1"
base64 = "0.21"

[lib]
name = "meteora_sniper_bot"
path = "src/lib.rs"